changed author css.

--- a/_sass/my-inline.scss
+++ b/_sass/my-inline.scss
@@ -29,11 +29,11 @@
 //	}
 //}
 
-img[src*="/assets/img/authors"]{
+.layout-about img[src*="/assets/img/authors"]{
 	padding: 20px 10px;
 }
 
-img[src*="/assets/img/tools"]{
+.layout-about img[src*="/assets/img/tools"]{
 	padding: 20px;
 }
 
