Revert "changed author css."
This reverts commit b6723a106bab1eb815617538fae6baca221ab479.

--- a/_sass/my-inline.scss
+++ b/_sass/my-inline.scss
@@ -29,11 +29,11 @@
 //	}
 //}
 
-.layout-about img[src*="/assets/img/authors"]{
+img[src*="/assets/img/authors"]{
 	padding: 20px 10px;
 }
 
-.layout-about img[src*="/assets/img/tools"]{
+img[src*="/assets/img/tools"]{
 	padding: 20px;
 }
 
